修复兼容性问题